--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,13 +1,8 @@
-body {
-    height: 100%;
-    padding-top: 90px;
-    padding-bottom: 25px;
-}
-
 .container-fluid {
     padding-top: 70px;
     padding-bottom: 70px;
 }
+
 .navbar {
     padding-top: 15px;
     padding-bottom: 15px;
@@ -22,23 +17,52 @@ body {
 
 .footer-padding {
     padding-bottom: 60px;
+    display: grid;
 }
 
-.footer {
-    position: absolute;
+footer {
+    position: fixed;
     text-align: center;
+    left: 0;
     bottom: 0;
     width: 100%;
     height: 60px;
     background-color: #1abc9c;
+    margin-top: 2rem;
 }
 
-.footer p {
+footer p {
     margin-top: 25px;
     font-size: 12px;
     color: #fff;
 }
 
 .page-container {
-    padding: 0 40px;
+    padding: 85px 80px;
+    overflow-y: auto;
+}
+
+.post-item {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.post-item a {
+    padding-left: 0;
+    padding-top: 0;
+}
+
+.errors {
+    margin: 2rem auto;
+}
+
+.errors p {
+    --tw-bg-opacity: 1;
+    background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 700;
+    padding: 8px;
+    margin-bottom: 1rem;
 }
