Update footer view page

--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,5 +1,5 @@
 </body>
-<footer>
-  <p>Footer</p>
-</footer>
+    <footer class="footer-padding" >
+        <p>Copyright 2023 Irving Flores</p>
+    </footer>
 </html>
