Update conditional in header layout

--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -22,19 +22,19 @@
                 <ul class="nav navbar-nav navbar-right">
                     <!-- 6 -->
                     <li
-                        class="nav-item <%= (page === 'home') ? 'active' : '' %>"
+                        class="nav-item <%= (page === 'Home') ? 'active' : '' %>"
                         id="home"
                     >
                         <a class="nav-link" href="/">HOME</a>
                     </li>
                     <li
-                        class="nav-item <%= (page === 'about') ? 'active' : '' %>"
+                        class="nav-item <%= (page === 'About') ? 'active' : '' %>"
                         id="about"
                     >
                         <a class="nav-link" href="/about">ABOUT US</a>
                     </li>
                     <li
-                        class="nav-item <%= (page === 'contact') ? 'active' : '' %>"
+                        class="nav-item <%= (page === 'Contact') ? 'active' : '' %>"
                         id="contact"
                     >
                         <a class="nav-link" href="/contact">CONTACT US</a>
